# psyAITools

./: README.md  pyproject.toml
psyaitools/: main.py  test.py  test_rec.py  test_wavFreq.py
psyaitools/func/representation/: factDecomMachine.py
psyaitools/functional/IOs/: base64_xfccs.py
psyaitools/functional/representation/: factDecomMachine.py
psyaitools/src/functional/: recommendation.py
test/: main.py
tests/: test.py  test_recSpark.py
