[tool.poetry]
name = "psyaitools"
version = "0.1.0"
description = ""
authors = ["moomoofarm1 <46774289+moomoofarm1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
